# give-me

./: .gitignore  README.md  pyproject.toml
cboard/: __init__.py  __main__.py  manage.py  representations.py  utils.py
doc/: copy.md  create.md  list.md  remove.md
give_me/: __init__.py  __main__.py  password.py  utils.py
give_me/src/: app.py  cryptography.py  fileops.py  help.py  manager.py
tests/: test_cboard.py
