[tool.poetry]
name = "give-me"
version = "0.1.0"
description = "password manager"
authors = ["DrShahinstein <1taylanozturk@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
